Correção para rodar todos os testes.